--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nextgen Technologies</title>
-    <link rel="shortcut icon" type="image/x-icon" href="weblogo.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="images/weblogo.png" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -29,7 +29,7 @@
       <nav class="main-navbar">
         <div class="logo">
           <a href="#home">
-            <img src="logo3.png" alt="Logo">
+            <img src="images/logo3.png" alt="Logo">
             
           </a>
         </div>
@@ -66,27 +66,27 @@
         </button>
         <div class="course-list">
           <div class="course-item">
-            <img src="Microsoft-Power-BI-Symbol.png" alt="Power BI Logo" />
+            <img src="images/Microsoft-Power-BI-Symbol.png" alt="Power BI Logo" />
             <h2>Power BI</h2>
             <button onclick="showModal('powerbi')">Learn More</button>
           </div>
           <div class="course-item">
-            <img src="dev1.png" alt="DevOps Logo" />
+            <img src="images/dev1.png" alt="DevOps Logo" />
             <h2>DevOps</h2>
             <button onclick="showModal('devops')">Learn More</button>
           </div>
           <div class="course-item">
-            <img src="453-4533338_oracle-logo-for-website-new-oracle-logo-png-removebg-preview.png" alt="OBIEE Logo" />
+            <img src="images/453-4533338_oracle-logo-for-website-new-oracle-logo-png-removebg-preview.png" alt="OBIEE Logo" />
             <h2>OBIEE/OAS</h2>
             <button onclick="showModal('oracle')">Learn More</button>
           </div>
           <div class="course-item">
-            <img src="j1.png" alt="Java Logo" />
+            <img src="images/j1.png" alt="Java Logo" />
             <h2>Java</h2>
             <button onclick="showModal('java')">Learn More</button>
           </div>
           <div class="course-item">
-            <img src="py.png" alt="Python Logo" />
+            <img src="images/py.png" alt="Python Logo" />
             <h2>Python</h2>
             <button onclick="showModal('python')">Learn More</button>
           </div>
@@ -149,7 +149,7 @@
                 <div class="feature2">
                     <div class="feature-content">
                         <div class="image-container">
-                            <img src="pa.jpg" alt="Personalized Assistance">
+                            <img src="images/pa.jpg" alt="Personalized Assistance">
                         </div>
                         <div class="data-container">
                             <h3>Personalized Assistance</h3>
@@ -161,7 +161,7 @@
                 <div class="feature2">
                     <div class="feature-content">
                         <div class="image-container">
-                            <img src="26.jpg" alt="24/7 Support">
+                            <img src="images/26.jpg" alt="24/7 Support">
                         </div>
                         <div class="data-container">
                             <h3>24/7 Support</h3>
@@ -173,7 +173,7 @@
                 <div class="feature2">
                     <div class="feature-content">
                         <div class="image-container">
-                            <img src="rss.jpg" alt="Remote and On-site Services">
+                            <img src="images/rss.jpg" alt="Remote and On-site Services">
                         </div>
                         <div class="data-container">
                             <h3>Remote and On-site Services</h3>
@@ -190,7 +190,7 @@
         <div class="section-content">
             <div class="tech-support-content">
                 <div class="tech-support-image">
-                    <img src="js.jpg" alt="Tech Support Image" />
+                    <img src="images/js.jpg" alt="Tech Support Image" />
                 </div>
                 <div class="tech-support-data">
                     <h1>Jobs Support</h1>
@@ -279,7 +279,7 @@
 </div>
 
         <div class="about-image">
-          <img src="ab.jpg" alt="About Us Image">
+          <img src="images/ab.jpg" alt="About Us Image">
         </div>
       </section>
       
